# COTC-project

./: .gitignore  README_dashboard_messages.md
data_aggregator/: .windsurfrules  README.md  UWSGI_DEPLOYMENT.md  config.json  data_aggregator.service  migrate.py  nginx_data_aggregator.conf  pyproject.toml  run.py  run_gunicorn.sh  run_socketio_directly.py  run_uwsgi.sh  run_uwsgi_simple.sh  setup_service.sh  test_socketio.py  test_uwsgi.sh  uwsgi.ini  wsgi.py  wsgi_simple.py
data_aggregator/data/: chess_data.db
data_aggregator/src/: app.py  chess_utils.py  dashboard.py  database.py  init_db.py  migrate_data.py  models.py
data_aggregator/src/assets/: custom.css
data_aggregator/src/lib_config/: __init__.py  config.py
data_aggregator/src/templates/: dashboard.html  index.html
data_collector/: Data_Model_Report.md  METRICS.md  README.md  config.json  pyproject.toml  requirements.txt
data_collector/src/: main.py
data_collector/src/data_collector/: __init__.py  async_metrics.py  logging_config.py  main.py  metrics_sender.py  models.py  remote_metrics.py  system_metrics.py
data_collector/src/lib_config/: config.py
