[project]
name = "data-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.1.1",
    "berserk>=0.13.2",
    "python-dotenv>=1.0.1",
    "python-socketio>=5.12.1",
    "aiohttp>=3.11.12",
    "colorlog>=6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
